<resources>
    <string name="mapbox_access_token">sk.eyJ1IjoibmFsbGVwdXoiLCJhIjoiY21raTZkeGFtMHA1ODNkcGZpZnkxeHh4ciJ9.QEC6N34MjY9gE6L_q-yPGw</string>
    <string name="app_name">WorkLink</string>
    <string name="crear_nota">CREAR NOTA</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="enviar">ENVIAR</string>
    <string name="selecciona_un_d_a">Selecciona un día</string>
    <string name="solicitud_n">SOLICITUD Nº -</string>
    <string name="tipo">Tipo</string>
    <string name="estado">Estado</string>
    <string name="horas">Horas</string>
    <string name="hora_inicio">Hora inicio</string>
    <string name="hora_fin">Hora fin</string>
    <string name="urgente">Urgente</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="crear_nota2">CREAR NOTA</string>
    <string name="titulo2">Titulo</string>
    <string name="descripcion2">Descripcion</string>
    <string name="modificar2">MODIFICAR</string>
    <string name="eliminar2">ELIMINAR</string>
    <string name="notas_worklink">Notas WorkLink</string>
    <string name="if_you_have_an_account_login">Ya tienes una cuenta? Login</string>
    <string name="if_you_have_an_account_login2">Ya tienes una cuenta? Login</string>
    <string name="name">nombre</string>
    <string name="phone">Telefono</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repite contraseña</string>
    <string name="register">Registrar</string>
    <string name="email">email</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="solicitud">SOLICITUD</string>
    <string name="tipo2">Tipo</string>
    <string name="estado2">Estado</string>
    <string name="horas2">Horas</string>
    <string name="horas_solicitadas">Horas Solicitadas</string>
    <string name="hora_inicio2">Hora inicio</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="hora_fin2">Hora fin</string>
    <string name="seleccionar2">Seleccionar</string>
    <string name="urgente2">Urgente</string>
    <string name="enviar2">ENVIAR</string>
    <string name="settings">AJUSTES</string>
    <string name="name2">Nombre</string>
    <string name="phone2">Telefono</string>
    <string name="email2">Email</string>
    <string name="password2">Contraseña</string>
    <string name="repeat_password2">Repite contraseña</string>
    <string name="latitude">Latitud</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="longitude">Longitude</string>
    <string name="login">Acceder</string>
    <string name="password3">Contraseña</string>
    <string name="don_t_have_an_account_sign_up">No tienes cuenta? Registrate</string>
    <string name="descripcion3">DESCRIPCION</string>
    <string name="titulo3">TITULO</string>
    <string name="descripcion4">DESCRIPCION</string>
    <string name="titulo4">TITULO</string>
    <string name="tipo3">Tipo</string>
    <string name="estado3">Estado</string>
    <string name="rellena_todos_los_campos">Rellena todos los campos</string>
    <string name="error_al_cargar">"Error al cargar: "</string>
    <string name="error_de_red">Error de red</string>
    <string name="rellena_los_campos_obligatorios">Rellena los campos obligatorios</string>
    <string name="solicitud_modificada">Solicitud modificada</string>
    <string name="error_al_modificar">Error al modificar</string>
    <string name="fallo_de_red">Fallo de red</string>
    <string name="horas_no_v_lidas">Horas no válidas</string>
    <string name="solicitud_eliminada">Solicitud eliminada</string>
    <string name="error_al_eliminar">Error al eliminar</string>
    <string name="no_hay_usuario_logueado">No hay usuario logueado</string>
    <string name="usuario_no_encontrado">Usuario no encontrado</string>
    <string name="error_de_red_al_cargar_usuario">Error de red al cargar usuario</string>
    <string name="error_al_cargar_solicitudes">"Error al cargar solicitudes: "</string>
    <string name="error_de_red_al_cargar_solicitudes">Error de red al cargar solicitudes</string>
    <string name="rellena_todos_los_campos2">Rellena todos los campos</string>
    <string name="error_al_conectar_con_el_servidor">Error al conectar con el servidor</string>
    <string name="usuario_o_contrase_a_incorrectos">Usuario o contraseña incorrectos</string>
    <string name="usuario_o_contrase_a_incorrectos2">Usuario o contraseña incorrectos</string>
    <string name="error_de_red2">"Error de red: "</string>
    <string name="introduce_longitud_y_latitud">Introduce longitud y latitud</string>
    <string name="email_o_tel_fono_ya_registrado">Email o teléfono ya registrado</string>
    <string name="error_al_registrar">"Error al registrar: "</string>
    <string name="error_de_red3">"Error de red: "</string>
    <string name="longitud_latitud_no_v_lidas">Longitud/latitud no válidas</string>
    <string name="rellena_todos_los_campos3">Rellena todos los campos</string>
    <string name="las_contrase_as_no_coinciden">Las contraseñas no coinciden</string>
    <string name="email_no_v_lido">Email no válido</string>
    <string name="error_desconocido">Error desconocido</string>
    <string name="error_al_enviar">"Error al enviar: "</string>
    <string name="error_de_red_al_enviar_solicitud">Error de red al enviar solicitud</string>
    <string name="horas_debe_ser_un_n_mero">Horas debe ser un número</string>
    <string name="nombre_tel_fono_y_email_son_obligatorios">Nombre, teléfono y email son obligatorios</string>
    <string name="las_contrase_as_no_coinciden2">Las contraseñas no coinciden</string>
    <string name="error_al_actualizar">"Error al actualizar: "</string>
    <string name="fallo_de_red3">Fallo de red</string>
    <string name="coordenadas_no_v_lidas">Coordenadas no válidas</string>
    <string name="error_al_eliminar3">Error al eliminar</string>
    <string name="tipo_estado_y_horas_son_obligatorios">Tipo, estado y horas son obligatorios</string>
    <string name="cargando_usuario_espera_un_momento">Cargando usuario... espera un momento</string>
    <string name="error_de_red_al_cargar_usuario2">Error de red al cargar usuario</string>
    <string name="no_se_pudo_obtener_el_usuario">No se pudo obtener el usuario</string>
    <string name="no_hay_usuario_logueado2">No hay usuario logueado</string>
    <string name="datos_actualizados_correctamente">Datos actualizados correctamente</string>
    <string name="cuenta_eliminada_correctamente">Cuenta eliminada correctamente</string>
    <string name="usuario_no_encontrado2">Usuario no encontrado</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="seguro_que_quieres_eliminar_tu_cuenta_esta_acci_n_no_se_puede_deshacer">¿Seguro que quieres eliminar tu cuenta? Esta acción no se puede deshacer.</string>
    <string name="eliminar4">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="solicitud_enviada_correctamente">Solicitud enviada correctamente</string>
    <string name="usuario_registrado_correctamente">Usuario registrado correctamente</string>
    <string name="no_tienes_solicitudes">No tienes solicitudes</string>
    <string name="id_no_v_lido">ID no válido</string>
    <string name="solicitud_n2">"SOLICITUD Nº - "</string>
    <string name="bienvenido">"¡Bienvenido "</string>
    <string name="turno_de_ma_ana">Turno de mañana</string>
    <string name="turno_de_tarde">Turno de tarde</string>
    <string name="turno_de_noche">Turno de noche</string>
    <string name="nota_eliminada">Nota eliminada</string>
    <string name="nota_actualizada">Nota actualizada</string>
    <string name="guardado">¡Guardado!</string>

</resources>