<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#B00020"
            app:title="WorkLink"
            app:titleCentered="true"
            app:titleTextColor="@android:color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textServerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crear_nota2"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/titulo4"
                    app:layout_constraintTop_toBottomOf="@+id/textServerName"
                    tools:layout_editor_absoluteX="16dp" />

                <EditText
                    android:id="@+id/editTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/titulo2"
                    android:inputType="text"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/descripcion4"
                    app:layout_constraintTop_toBottomOf="@+id/editTitulo"
                    tools:layout_editor_absoluteX="16dp" />

                <EditText
                    android:id="@+id/editEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/descripcion2"
                    android:inputType="textMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:layout_editor_absoluteX="16dp"
                    android:lines="5"
                    android:minLines="3"
                    android:scrollbars="vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/editEstado"
                    tools:layout_editor_absoluteX="16dp">

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="#AF0020"
                        android:text="@string/modificar2" />

                    <Button
                        android:id="@+id/btnDel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="#680315"
                        android:text="@string/eliminar2" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/botNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@color/design_default_color_error"
            app:itemTextColor="#F6F3F3"
            app:menu="@menu/bottom_menu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>