<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#B00020"
            app:title="WorkLink"
            app:titleCentered="true"
            app:titleTextColor="@android:color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textServerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crear_nota"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/titulo3"
                    app:layout_constraintTop_toBottomOf="@+id/textServerName"
                    tools:layout_editor_absoluteX="16dp" />

                <EditText
                    android:id="@+id/editTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/titulo"
                    android:inputType="text"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/descripcion3"
                    app:layout_constraintTop_toBottomOf="@+id/editTitulo"
                    tools:layout_editor_absoluteX="16dp" />

                <EditText
                    android:id="@+id/editEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/descripcion"
                    android:inputType="textMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:layout_editor_absoluteX="16dp"
                    android:lines="5"
                    android:minLines="3"
                    android:scrollbars="vertical"/>

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#AF0020"
                    android:text="@string/enviar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editEstado" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/botNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@color/design_default_color_error"
            app:itemTextColor="#F6F3F3"
            app:menu="@menu/bottom_menu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>